fixed layout problem

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -1,3 +1,8 @@
+.card-body {
+  width: 250px;
+}
+
+
 .card-spot {
   overflow: hidden;
   background: white;
