--- a/app/assets/stylesheets/components/_container.scss
+++ b/app/assets/stylesheets/components/_container.scss
@@ -1,4 +1,4 @@
 .container {
-  width: 500px;
+  width: 900px;
   align: center;
 }
